src/test/deca/syntax/valid/created/vrai5.deca
{
	int _ident = 23;
}
