src/test/deca/syntax/invalid/created/faux23.deca
{
	int a = 23/false;
}
